feat: dashboard data
